[package]
name = "correy"
version = "0.1.2"
edition = "2021"
description = "made by correy"
license = "MIT"
homepage = "https://github.com/kouzhudong/correy"
repository = "https://github.com/kouzhudong/correy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
